--- a/public/Assets/Css/safeStyling.css
+++ b/public/Assets/Css/safeStyling.css
@@ -1,164 +1,83 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-    <head>
-        <title>SafeSense LIVE</title>
-        <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css" integrity="sha384-UQiGfs9ICog+LwheBSRCt1o5cbyKIHbwjWscjemyBMT9YCUMZffs6UqUTd0hObXD" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:200">
-        <link rel="stylesheet" href="./Assets/Css/safeStyling.css">
-        <link rel="icon" type="image/png" href="./Assets/Images/siteIcon.jpg"/>
-        <meta name="description" content="HomePage for SafeSense LIVE" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta charset="UTF-8">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-            crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-            integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-            crossorigin="anonymous">
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-            crossorigin="anonymous"></script>
-            <!--***DEFINE 3D MODEL SCRIPTS***-->
-            <script src="./Scripts/WebGL/three.min.js"></script>
-            <script src="./Scripts/WebGL/OrbitControls.js"></script>
-            <script src="./Scripts/WebGL/OBJLoader.js"></script>
-            <script src="./Scripts/WebGL/MTLLoader.js"></script>
-            <!--*** END DEFINE 3D MODEL SCRIPTS***-->
-
-            <!--Main script for page 3D models-->
-            <script src="./Scripts/HeadImpactModel.js"></script>
-
-    </head>
-    <body>
-      <nav class="navbar navbar-expand-lg">
-        <button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="index.html">
-                  Home
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="how.html">
-                  Site help
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="about.html">
-                  About us
-                </a>
-              </li>
-            </ul>
-          <div class="ml-md-auto rightSection">
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="database.html">
-                  Database
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="dashboard.html">
-                  Dashboard
-                </a>
-              </li>
-            </ul>
-          </div>
-          </div>
-        </nav>
-      <div class="header">
-        <img src="./Assets/Images/SafeSense Technologies (Logo).jpg" height="55px"/>
-        <h2>Realtime Channel Updates</h2>
-      </div>
-        <header>
-            <div id="logout" class="logout">
-               <a href="/logout">Logout</a>
-            </div>
-        </header>
-        <section>
-           <div id="loader" class="loader">
-              Loading...
-           </div>
-           <br />
-           <canvas id="channelChart"></canvas>
-           <!-- <a href="javascript:toggleLegend()">Legend Toggle</a> -->
-           <!-- <a href="javascript:toggleTooltips()">Tool Tip Toggle</a> -->
-        </section>
-      <section>
-        <br />
-        <br />
-         <br />
-         <canvas id="diffChart"></canvas>
-      </section>
-      <br />
-      <br />
-      <canvas id="sensorCircles" height="600" width="1000">
-        <script>
-          var c = document.getElementById("sensorCircles");
-          var ctx = c.getContext("2d");
-          ctx.beginPath();
-          ctx.arc(100, 75, 50, 0, 2 * Math.PI);
-          ctx.stroke();
-          ctx.beginPath();
-          ctx.arc(225, 75, 50, 0, 2 * Math.PI);
-          ctx.stroke();
-          ctx.beginPath();
-          ctx.arc(100, 190, 50, 0, 2 * Math.PI);
-          ctx.stroke();
-          ctx.beginPath();
-          ctx.arc(225, 190, 50, 0, 2 * Math.PI);
-          ctx.stroke();
-          ctx.beginPath();
-          ctx.arc(450, 75, 50, 0, 2 * Math.PI);
-          ctx.stroke();
-          ctx.beginPath();
-          ctx.arc(575, 75, 50, 0, 2 * Math.PI);
-          ctx.stroke();
-          ctx.beginPath();
-          ctx.arc(450, 190, 50, 0, 2 * Math.PI);
-          ctx.stroke();
-          ctx.beginPath();
-          ctx.arc(575, 190, 50, 0, 2 * Math.PI);
-          ctx.stroke();
-          ctx.beginPath();
-          ctx.arc(100, 350, 50, 0, 2 * Math.PI);
-          ctx.stroke();
-          ctx.beginPath();
-          ctx.arc(225, 350, 50, 0, 2 * Math.PI);
-          ctx.stroke();
-          ctx.beginPath();
-          ctx.arc(100, 465, 50, 0, 2 * Math.PI);
-          ctx.stroke();
-          ctx.beginPath();
-          ctx.arc(225, 465, 50, 0, 2 * Math.PI);
-          ctx.stroke();
-
-          ctx.beginPath();
-          ctx.arc(450, 350, 50, 0, 2 * Math.PI);
-          ctx.stroke();
-          ctx.beginPath();
-          ctx.arc(575, 350, 50, 0, 2 * Math.PI);
-          ctx.stroke();
-          ctx.beginPath();
-          ctx.arc(450, 465, 50, 0, 2 * Math.PI);
-          ctx.stroke();
-          ctx.beginPath();
-          ctx.arc(575, 465, 50, 0, 2 * Math.PI);
-          ctx.stroke();
-        </script>
-      </canvas>
-      <br />
-        <!-- <section>
-          <canvas id="barChannelChart" class="hide"></canvas>
-        </section> -->
-        <div id="HeadImpactModel">
-
-        </div>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.bundle.min.js"></script>
-        <script src="https://d3js.org/d3.v5.min.js"></script>
-        <script type="text/javascript" src="./Scripts/main.js"></script>
-    </body>
-</html>
+nav.navbar.navbar-expand-lg{
+  background-color:  #E9F1FA;
+  padding-left:20px;
+  border: solid;
+  z-index: 50;
+  transition: 1s;
+  text-align: center;
+}
+nav.navbar.navbar-expand-lg:hover{
+  background-color: #459DBB;
+}
+nav.navbar.navbar-expand-lg a:hover{
+  text-decoration: underline;
+}
+.rightSection{
+  padding-right: 25px;
+  display: block;
+}
+.nav-link{
+  color: black;
+  font-weight: bold;
+  font-size: 18px;
+}
+.nav-link:hover{
+    color: black;
+}
+.header img{
+  float: left;
+}
+body{
+    margin:0;
+    padding:0;
+    overflow: auto;
+    font-family: Raleway;
+}
+h2{
+  float: left;
+}
+header{
+    background: #2b303b;
+    height: 50px;
+    width:100%;
+    display: flex;
+    color:#fff;
+}
+.subheader{
+    display: flex;
+    align-items: center;
+    margin: 0px;
+}
+.logout{
+    flex:1;
+    justify-content: flex-end;
+    padding:15px;
+    display: none;
+}
+.logout a{
+    color:#fff;
+    text-decoration: none;
+}
+canvas{
+  display: block;
+}
+#channelChart{
+    height: 70%;
+    width: 90%;
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: auto;
+    margin-right: auto;
+}
+#barChannelChart{
+  width: 100% !important;
+  height: 100% !important;
+  padding-left: 0;
+  padding-right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  /* float: right; */
+}
+.hide{
+  display: none;
+}
