--- a/public/Assets/Css/safeStyling.css
+++ b/public/Assets/Css/safeStyling.css
@@ -178,3 +178,69 @@ text-align: center;
 #HeadImpactModel{
 
 }
+.widthSlider{
+  width: 80%;
+  margin-left: 25px;
+}
+.sampleSlider{
+  width: 80%;
+  margin-left: 25px;
+}
+#wSlider{
+  -webkit-appearance: none;  /* Override default CSS styles */
+ appearance: none;
+ width: 100%; /* Full-width */
+ height: 25px; /* Specified height */
+ background: #d3d3d3; /* Grey background */
+ outline: none; /* Remove outline */
+ opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
+ -webkit-transition: .2s; /* 0.2 seconds transition on hover */
+ transition: opacity .2s;
+}
+#wSlider:hover {
+  opacity: 1; /* Fully shown on mouse-over */
+}
+#wSlider::-webkit-slider-thumb {
+  -webkit-appearance: none; /* Override default look */
+  appearance: none;
+  width: 25px; /* Set a specific slider handle width */
+  height: 25px; /* Slider handle height */
+  background: #457AD5; /* Blue background */
+  cursor: pointer; /* Cursor on hover */
+}
+
+#wSlider::-moz-range-thumb {
+  width: 25px; /* Set a specific slider handle width */
+  height: 25px; /* Slider handle height */
+  background: #457AD5; /* Blue background */
+  cursor: pointer; /* Cursor on hover */
+}
+#rSlider{
+  -webkit-appearance: none;  /* Override default CSS styles */
+ appearance: none;
+ width: 100%; /* Full-width */
+ height: 25px; /* Specified height */
+ background: #d3d3d3; /* Grey background */
+ outline: none; /* Remove outline */
+ opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
+ -webkit-transition: .2s; /* 0.2 seconds transition on hover */
+ transition: opacity .2s;
+}
+#rSlider:hover {
+  opacity: 1; /* Fully shown on mouse-over */
+}
+#rSlider::-webkit-slider-thumb {
+  -webkit-appearance: none; /* Override default look */
+  appearance: none;
+  width: 25px; /* Set a specific slider handle width */
+  height: 25px; /* Slider handle height */
+  background: #457AD5; /* Blue background */
+  cursor: pointer; /* Cursor on hover */
+}
+
+#rSlider::-moz-range-thumb {
+  width: 25px; /* Set a specific slider handle width */
+  height: 25px; /* Slider handle height */
+  background: #457AD5; /* Blue background */
+  cursor: pointer; /* Cursor on hover */
+}
