--- a/public/Assets/Css/safeStyling.css
+++ b/public/Assets/Css/safeStyling.css
@@ -24,9 +24,6 @@ nav.navbar.navbar-expand-lg a:hover{
 .nav-link:hover{
     color: black;
 }
-.header img{
-  align-content: center;
-}
 body{
     margin:0;
     padding:0;
@@ -34,9 +31,6 @@ body{
     font-family: Raleway;
     width: auto;
     height: auto;
-}
-h2{
-  float: left;
 }
 header{
     background: #2b303b;
@@ -48,6 +42,12 @@ header{
     margin-left: auto;
     margin-right: auto;
     color:#fff;
+}
+.header h2{
+  margin-left: 47%;
+}
+.header img{
+  margin-left: 10px;
 }
 .subheader{
     display: flex;
@@ -70,10 +70,16 @@ canvas{
 #channelChart{
     /* height: 100%;
     width: 100%; */
-    padding-left: 0;
-    padding-right: 0;
+    padding-left: 10px;
+    padding-right: 10px;
     margin-left: auto;
     margin-right: auto;
+}
+#diffChart{
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-left: auto;
+  margin-right: auto;
 }
 #barChannelChart{
   width: 100% !important;
@@ -187,64 +193,6 @@ text-align: center;
 .sampleSlider{
   width: 80%;
   margin-left: 25px;
-}
-#wSlider{
-  -webkit-appearance: none;  /* Override default CSS styles */
- appearance: none;
- width: 100%; /* Full-width */
- height: 25px; /* Specified height */
- background: #d3d3d3; /* Grey background */
- outline: none; /* Remove outline */
- opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
- -webkit-transition: .2s; /* 0.2 seconds transition on hover */
- transition: opacity .2s;
-}
-#wSlider:hover {
-  opacity: 1; /* Fully shown on mouse-over */
-}
-#wSlider::-webkit-slider-thumb {
-  -webkit-appearance: none; /* Override default look */
-  appearance: none;
-  width: 25px; /* Set a specific slider handle width */
-  height: 25px; /* Slider handle height */
-  background: #457AD5; /* Blue background */
-  cursor: pointer; /* Cursor on hover */
-}
-
-#wSlider::-moz-range-thumb {
-  width: 25px; /* Set a specific slider handle width */
-  height: 25px; /* Slider handle height */
-  background: #457AD5; /* Blue background */
-  cursor: pointer; /* Cursor on hover */
-}
-#rSlider{
-  -webkit-appearance: none;  /* Override default CSS styles */
- appearance: none;
- width: 100%; /* Full-width */
- height: 25px; /* Specified height */
- background: #d3d3d3; /* Grey background */
- outline: none; /* Remove outline */
- opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
- -webkit-transition: .2s; /* 0.2 seconds transition on hover */
- transition: opacity .2s;
-}
-#rSlider:hover {
-  opacity: 1; /* Fully shown on mouse-over */
-}
-#rSlider::-webkit-slider-thumb {
-  -webkit-appearance: none; /* Override default look */
-  appearance: none;
-  width: 25px; /* Set a specific slider handle width */
-  height: 25px; /* Slider handle height */
-  background: #457AD5; /* Blue background */
-  cursor: pointer; /* Cursor on hover */
-}
-
-#rSlider::-moz-range-thumb {
-  width: 25px; /* Set a specific slider handle width */
-  height: 25px; /* Slider handle height */
-  background: #457AD5; /* Blue background */
-  cursor: pointer; /* Cursor on hover */
 }
 #loading-screen {
 	position: absolute;
